| Summary: | ASTERISK-25929: res_pjsip_registrar: AOR_CONTACT_ADDED events not raised | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-04-15 10:25:52 | Date Closed: | 2016-04-19 09:13:48 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_registrar |
| Versions: | 13.8.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In some cases the AOR_CONTACT_ADDED testsuite events are not getting raised. Looking at logs shows the JSON function complaining about invalid UTF-8. Looking even further shows the user_agent variable (which should be NULL) is actually non-NULL. That's bad.
Declaring contact_uri using the define works a great. Declaring it using the new variable doesn't. | ||
| Comments: | |||