res/res_pjsip_registrar.c
@@ -576,7 +576,9 @@ static int rx_task_core(struct rx_task_data *task_data, struct ao2_container *co
 			ao2_cleanup(contact_update);
 		} else {
 			/* We want to report the user agent that was actually in the removed contact */
-			user_agent = ast_strdupa(contact->user_agent);
+			const char *stored_user_agent;
+
+			stored_user_agent = ast_strdupa(contact->user_agent);
 			ast_sip_location_delete_contact(contact);
 			ast_verb(3, "Removed contact '%s' from AOR '%s' due to request\n", contact_uri, aor_name);
 			ast_test_suite_event_notify("AOR_CONTACT_REMOVED",
@@ -585,7 +587,7 @@ static int rx_task_core(struct rx_task_data *task_data, struct ao2_container *co
 					"UserAgent: %s",
 					contact_uri,
 					aor_name,
-					user_agent);
+					stored_user_agent);
 		}
 	}
 
